@@ -1,3 +1,7 @@
+19/11/10 Julien Dutheil
+* Solved bug 0000016 (General comments not copied in containers).
+* A few more code cleaning.
+
 01/11/10 Julien Dutheil
 * Solved bug 0000005 (Clustal parser).
 * Added unit testing for sequence input format.
